kubernetes/core/gateway/gateway.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  gatewayClassName: metallb
  infrastructure: 
    annotations:
       metallb.universe.tf/address-pool: main-address-pool
    listeners:
      - protocol: HTTP
        port: 80
        name: http
        allowedRoutes:
          namespaces:
            from: All
      - protocol: HTTPS
        port: 443
        name: https
        tls:
          certificateRefs:
            - kind: Secret
              name: letsencrypt-productuib
              namespace: cert-manager
          allowRoutes:
            namespaces:
              from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpsredirect-externalgw
  namespace: gateway
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
